syntax = "proto3";
package ada;

import "google/protobuf/struct.proto";

message Template {
  string location = 1;
}

message Script {
  string dir = 1;
  string name = 2;
}

message Frames {
  int32 start = 1;
  int32 end = 2;
}

message Format {
  uint32 width = 1;
  uint32 height = 2;
  float pixel_aspect = 3;
}

message Context {
  google.protobuf.Struct inputs = 1;
  google.protobuf.Struct outputs = 2;
  Template template = 3;
  Script output_script = 4;

  enum HostsTypes {
    NUKE = 0;
    MAYA = 1;
    HOUDINI = 2;
    GAFFER = 3;
    CLARISSE = 4;
    KATANA = 5;
    MARI = 6;
  }

  HostsTypes host = 6;
  string show = 7;
  string shot = 8;
  Format format = 9;
  Frames frame_range = 10;
  google.protobuf.Struct aliases = 100;

}
